--- a/pug/_partials/header.pug
+++ b/pug/_partials/header.pug
@@ -15,15 +15,15 @@ header.c-header.c-header-light.c-header-fixed.c-header-with-subheader
         a.c-header-nav-link(href="#") Settings
     ul.c-header-nav.ml-auto.mr-4
       li.c-header-nav-item.d-md-down-none.mx-2
-        a.c-header-nav-link
+        a.c-header-nav-link(href="#")
           svg.c-icon
             use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-bell")
       li.c-header-nav-item.d-md-down-none.mx-2
-        a.c-header-nav-link
+        a.c-header-nav-link(href="#")
           svg.c-icon
             use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-list-rich")
       li.c-header-nav-item.d-md-down-none.mx-2
-        a.c-header-nav-link
+        a.c-header-nav-link(href="#")
           svg.c-icon
             use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-envelope-open")
       li.c-header-nav-item.dropdown
