--- a/pug/_partials/sidebar.pug
+++ b/pug/_partials/sidebar.pug
@@ -2,206 +2,205 @@
   .c-sidebar-brand
     img.c-sidebar-brand-full(src="assets/brand/coreui-base-white.svg" width="118" height="46" alt="CoreUI Logo")
     img.c-sidebar-brand-minimized(src="assets/brand/coreui-signet-white.svg" width="118" height="46" alt="CoreUI Logo")
-  nav.c-sidebar-nav
-    ul.c-nav
-      li.c-nav-item
-        a.c-nav-link(href=ajax ? 'main.html' : 'index.html')
-          svg.c-nav-icon
-            use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-speedometer")
-          |  Dashboard
-          span.badge.badge-info NEW
-      li.c-nav-title
-        | Theme
-      li.c-nav-item
-        a.c-nav-link(href='colors.html')
-          svg.c-nav-icon
-            use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-drop1")
-          |  Colors
-      li.c-nav-item
-        a.c-nav-link(href='typography.html')
-           svg.c-nav-icon
-             use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-pencil")
-           |  Typography
-      li.c-nav-title
-        | Components
-      li.c-nav-item.c-nav-dropdown
-        a.c-nav-link.c-nav-dropdown-toggle(href='#')
-          svg.c-nav-icon
-            use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-puzzle")
-          |  Base
-        ul.c-nav-dropdown-items
-          li.c-nav-item
-            a.c-nav-link(href='base/breadcrumb.html')
-              span.c-nav-icon
-              |  Breadcrumb
-          li.c-nav-item
-            a.c-nav-link(href='base/cards.html')
-              span.c-nav-icon
-              |  Cards
-          li.c-nav-item
-            a.c-nav-link(href='base/carousel.html')
-              span.c-nav-icon
-              |  Carousel
-          li.c-nav-item
-            a.c-nav-link(href='base/collapse.html')
-              span.c-nav-icon
-              |  Collapse
-          li.c-nav-item
-              a.c-nav-link(href='base/forms.html')
-                span.c-nav-icon
-                |  Forms
-          li.c-nav-item
-            a.c-nav-link(href='base/jumbotron.html')
-              span.c-nav-icon
-              |  Jumbotron
-          li.c-nav-item
-            a.c-nav-link(href='base/list-group.html')
-              span.c-nav-icon
-              |  List group
-          li.c-nav-item
-            a.c-nav-link(href='base/navs.html')
-              span.c-nav-icon
-              |  Navs
-          li.c-nav-item
-            a.c-nav-link(href='base/pagination.html')
-              span.c-nav-icon
-              |  Pagination
-          li.c-nav-item
-            a.c-nav-link(href='base/popovers.html')
-              span.c-nav-icon
-              |  Popovers
-          li.c-nav-item
-            a.c-nav-link(href='base/progress.html')
-              span.c-nav-icon
-              |  Progress
-          li.c-nav-item
-            a.c-nav-link(href='base/scrollspy.html')
-              span.c-nav-icon
-              |  Scrollspy
-          li.c-nav-item
-            a.c-nav-link(href='base/switches.html')
-              span.c-nav-icon
-              |  Switches
-          li.c-nav-item
-              a.c-nav-link(href='base/tables.html')
-                span.c-nav-icon
-                |  Tables
-          li.c-nav-item
-            a.c-nav-link(href='base/tabs.html')
-              span.c-nav-icon
-              |  Tabs
-          li.c-nav-item
-            a.c-nav-link(href='base/tooltips.html')
-              span.c-nav-icon
-              |  Tooltips
-      li.c-nav-item.c-nav-dropdown
-        a.c-nav-link.c-nav-dropdown-toggle(href='#')
-          svg.c-nav-icon
-            use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-cursor")
-          |  Buttons
-        ul.c-nav-dropdown-items
-          li.c-nav-item
-            a.c-nav-link(href='buttons/buttons.html')
-              span.c-nav-icon
-              |  Buttons
-          li.c-nav-item
-            a.c-nav-link(href='buttons/button-group.html')
-              span.c-nav-icon
-              |  Buttons Group
-          li.c-nav-item
-            a.c-nav-link(href='buttons/dropdowns.html')
-              span.c-nav-icon
-              |  Dropdowns
-          li.c-nav-item
-            a.c-nav-link(href='buttons/brand-buttons.html')
-              span.c-nav-icon
-              |  Brand Buttons
-      li.c-nav-item
-        a.c-nav-link(href='charts.html')
-          svg.c-nav-icon
-            use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-chart-pie")
-          |  Charts
-      li.c-nav-item.c-nav-dropdown
-        a.c-nav-link.c-nav-dropdown-toggle(href='#')
-          svg.c-nav-icon
-            use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-star")
-          |  Icons
-        ul.c-nav-dropdown-items
-          li.c-nav-item
-            a.c-nav-link(href='icons/coreui-icons.html')
-              span.c-nav-icon
-              |  CoreUI Icons
-              span.badge.badge-success Free
-          li.c-nav-item
-            a.c-nav-link(href='icons/flags.html')
-              span.c-nav-icon
-              |  Flags
-          li.c-nav-item
-            a.c-nav-link(href='icons/brands.html')
-              span.c-nav-icon
-              |  Brands
-      li.c-nav-item.c-nav-dropdown
-        a.c-nav-link.c-nav-dropdown-toggle(href='#')
-          svg.c-nav-icon
-            use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-bell")
-          |  Notifications
-        ul.c-nav-dropdown-items
-          li.c-nav-item
-            a.c-nav-link(href='notifications/alerts.html')
-              span.c-nav-icon
-              |  Alerts
-          li.c-nav-item
-            a.c-nav-link(href='notifications/badge.html')
-              span.c-nav-icon
-              |  Badge
-          li.c-nav-item
-            a.c-nav-link(href='notifications/modals.html')
-              span.c-nav-icon
-              |  Modals
-      li.c-nav-item
-        a.c-nav-link(href='widgets.html')
-          svg.c-nav-icon
-            use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-calculator")
-          |  Widgets
-          span.badge.badge-info NEW
-      li.c-nav-divider
-      li.c-nav-title
-        | Extras
-      li.c-nav-item.c-nav-dropdown
-        a.c-nav-link.c-nav-dropdown-toggle(href='#')
-          svg.c-nav-icon
-            use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-star")
-          |  Pages
-        ul.c-nav-dropdown-items
-          li.c-nav-item
-            a.c-nav-link(href=ajax ? 'login.html' : 'login.html' target="_top")
-              svg.c-nav-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-account-logout")
-              |  Login
-          li.c-nav-item
-            a.c-nav-link(href=ajax ? 'register.html' : 'register.html' target="_top")
-              svg.c-nav-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-account-logout")
-              |  Register
-          li.c-nav-item
-            a.c-nav-link(href=ajax ? '404.html' : '404.html' target="_top")
-              svg.c-nav-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-bug")
-              |  Error 404
-          li.c-nav-item
-            a.c-nav-link(href=ajax ? '500.html' : '500.html' target="_top")
-              svg.c-nav-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-bug")
-              |  Error 500
-      li.c-nav-item.mt-auto
-        a.c-nav-link.c-nav-link-success(href="https://coreui.io" target="_top")
-          svg.c-nav-icon
-            use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-cloud-download")
-          |  Download CoreUI
-      li.c-nav-item
-        a.c-nav-link.c-nav-link-danger(href="https://coreui.io/pro/" target="_top")
-          svg.c-nav-icon
-            use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-layers")
-          |  Try CoreUI
-          strong PRO
+  ul.c-sidebar-nav
+    li.c-sidebar-nav-item
+      a.c-sidebar-nav-link(href=ajax ? 'main.html' : 'index.html')
+        svg.c-sidebar-nav-icon
+          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-speedometer")
+        |  Dashboard
+        span.badge.badge-info NEW
+    li.c-sidebar-nav-title
+      | Theme
+    li.c-sidebar-nav-item
+      a.c-sidebar-nav-link(href='colors.html')
+        svg.c-sidebar-nav-icon
+          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-drop1")
+        |  Colors
+    li.c-sidebar-nav-item
+      a.c-sidebar-nav-link(href='typography.html')
+          svg.c-sidebar-nav-icon
+            use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-pencil")
+          |  Typography
+    li.c-sidebar-nav-title
+      | Components
+    li.c-sidebar-nav-item.c-sidebar-nav-dropdown
+      a.c-sidebar-nav-link.c-sidebar-nav-dropdown-toggle(href='#')
+        svg.c-sidebar-nav-icon
+          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-puzzle")
+        |  Base
+      ul.c-sidebar-nav-dropdown-items
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='base/breadcrumb.html')
+            span.c-sidebar-nav-icon
+            |  Breadcrumb
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='base/cards.html')
+            span.c-sidebar-nav-icon
+            |  Cards
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='base/carousel.html')
+            span.c-sidebar-nav-icon
+            |  Carousel
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='base/collapse.html')
+            span.c-sidebar-nav-icon
+            |  Collapse
+        li.c-sidebar-nav-item
+            a.c-sidebar-nav-link(href='base/forms.html')
+              span.c-sidebar-nav-icon
+              |  Forms
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='base/jumbotron.html')
+            span.c-sidebar-nav-icon
+            |  Jumbotron
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='base/list-group.html')
+            span.c-sidebar-nav-icon
+            |  List group
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='base/navs.html')
+            span.c-sidebar-nav-icon
+            |  Navs
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='base/pagination.html')
+            span.c-sidebar-nav-icon
+            |  Pagination
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='base/popovers.html')
+            span.c-sidebar-nav-icon
+            |  Popovers
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='base/progress.html')
+            span.c-sidebar-nav-icon
+            |  Progress
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='base/scrollspy.html')
+            span.c-sidebar-nav-icon
+            |  Scrollspy
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='base/switches.html')
+            span.c-sidebar-nav-icon
+            |  Switches
+        li.c-sidebar-nav-item
+            a.c-sidebar-nav-link(href='base/tables.html')
+              span.c-sidebar-nav-icon
+              |  Tables
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='base/tabs.html')
+            span.c-sidebar-nav-icon
+            |  Tabs
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='base/tooltips.html')
+            span.c-sidebar-nav-icon
+            |  Tooltips
+    li.c-sidebar-nav-item.c-sidebar-nav-dropdown
+      a.c-sidebar-nav-link.c-sidebar-nav-dropdown-toggle(href='#')
+        svg.c-sidebar-nav-icon
+          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-cursor")
+        |  Buttons
+      ul.c-sidebar-nav-dropdown-items
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='buttons/buttons.html')
+            span.c-sidebar-nav-icon
+            |  Buttons
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='buttons/button-group.html')
+            span.c-sidebar-nav-icon
+            |  Buttons Group
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='buttons/dropdowns.html')
+            span.c-sidebar-nav-icon
+            |  Dropdowns
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='buttons/brand-buttons.html')
+            span.c-sidebar-nav-icon
+            |  Brand Buttons
+    li.c-sidebar-nav-item
+      a.c-sidebar-nav-link(href='charts.html')
+        svg.c-sidebar-nav-icon
+          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-chart-pie")
+        |  Charts
+    li.c-sidebar-nav-item.c-sidebar-nav-dropdown
+      a.c-sidebar-nav-link.c-sidebar-nav-dropdown-toggle(href='#')
+        svg.c-sidebar-nav-icon
+          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-star")
+        |  Icons
+      ul.c-sidebar-nav-dropdown-items
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='icons/coreui-icons.html')
+            span.c-sidebar-nav-icon
+            |  CoreUI Icons
+            span.badge.badge-success Free
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='icons/flags.html')
+            span.c-sidebar-nav-icon
+            |  Flags
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='icons/brands.html')
+            span.c-sidebar-nav-icon
+            |  Brands
+    li.c-sidebar-nav-item.c-sidebar-nav-dropdown
+      a.c-sidebar-nav-link.c-sidebar-nav-dropdown-toggle(href='#')
+        svg.c-sidebar-nav-icon
+          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-bell")
+        |  Notifications
+      ul.c-sidebar-nav-dropdown-items
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='notifications/alerts.html')
+            span.c-sidebar-nav-icon
+            |  Alerts
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='notifications/badge.html')
+            span.c-sidebar-nav-icon
+            |  Badge
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href='notifications/modals.html')
+            span.c-sidebar-nav-icon
+            |  Modals
+    li.c-sidebar-nav-item
+      a.c-sidebar-nav-link(href='widgets.html')
+        svg.c-sidebar-nav-icon
+          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-calculator")
+        |  Widgets
+        span.badge.badge-info NEW
+    li.c-sidebar-nav-divider
+    li.c-sidebar-nav-title
+      | Extras
+    li.c-sidebar-nav-item.c-sidebar-nav-dropdown
+      a.c-sidebar-nav-link.c-sidebar-nav-dropdown-toggle(href='#')
+        svg.c-sidebar-nav-icon
+          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-star")
+        |  Pages
+      ul.c-sidebar-nav-dropdown-items
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href=ajax ? 'login.html' : 'login.html' target="_top")
+            svg.c-sidebar-nav-icon
+              use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-account-logout")
+            |  Login
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href=ajax ? 'register.html' : 'register.html' target="_top")
+            svg.c-sidebar-nav-icon
+              use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-account-logout")
+            |  Register
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href=ajax ? '404.html' : '404.html' target="_top")
+            svg.c-sidebar-nav-icon
+              use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-bug")
+            |  Error 404
+        li.c-sidebar-nav-item
+          a.c-sidebar-nav-link(href=ajax ? '500.html' : '500.html' target="_top")
+            svg.c-sidebar-nav-icon
+              use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-bug")
+            |  Error 500
+    li.c-sidebar-nav-item.mt-auto
+      a.c-sidebar-nav-link.c-sidebar-nav-link-success(href="https://coreui.io" target="_top")
+        svg.c-sidebar-nav-icon
+          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-cloud-download")
+        |  Download CoreUI
+    li.c-sidebar-nav-item
+      a.c-sidebar-nav-link.c-sidebar-nav-link-danger(href="https://coreui.io/pro/" target="_top")
+        svg.c-sidebar-nav-icon
+          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-layers")
+        |  Try CoreUI
+        strong PRO
   button.c-sidebar-minimizer.c-class-toggler(type="button" data-target="_parent" data-class="c-sidebar-minimized")
