--- a/pug/_partials/header.pug
+++ b/pug/_partials/header.pug
@@ -17,15 +17,15 @@ header.c-header.c-header-light.c-header-fixed.c-header-with-subheader
       li.c-header-nav-item.d-md-down-none.mx-2
         a.c-header-nav-link(href="#")
           svg.c-icon
-            use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-bell")
+            use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bell")
       li.c-header-nav-item.d-md-down-none.mx-2
         a.c-header-nav-link(href="#")
           svg.c-icon
-            use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-list-rich")
+            use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-list-rich")
       li.c-header-nav-item.d-md-down-none.mx-2
         a.c-header-nav-link(href="#")
           svg.c-icon
-            use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-envelope-open")
+            use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-envelope-open")
       li.c-header-nav-item.dropdown
         a.c-header-nav-link(data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false")
           .c-avatar
@@ -35,52 +35,52 @@ header.c-header.c-header-light.c-header-fixed.c-header-with-subheader
             strong Account
           a.dropdown-item(href="#")
             svg.c-icon.mr-2
-              use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-bell")
+              use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bell")
             |  Updates
             span.badge.badge-info.ml-auto 42
           a.dropdown-item(href="#")
             svg.c-icon.mr-2
-              use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-envelope-open")
+              use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-envelope-open")
             |  Messages
             span.badge.badge-success.ml-auto 42
           a.dropdown-item(href="#")
             svg.c-icon.mr-2
-              use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-task")
+              use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-task")
             |  Tasks
             span.badge.badge-danger.ml-auto 42
           a.dropdown-item(href="#")
             svg.c-icon.mr-2
-              use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-comment-square")
+              use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-comment-square")
             |  Comments
             span.badge.badge-warning.ml-auto 42
           .dropdown-header.bg-light.py-2
             strong Settings
           a.dropdown-item(href="#")
             svg.c-icon.mr-2
-              use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-user")
+              use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user")
             |  Profile
           a.dropdown-item(href="#")
             svg.c-icon.mr-2
-              use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-settings")
+              use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-settings")
             |  Settings
           a.dropdown-item(href="#")
             svg.c-icon.mr-2
-              use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-credit-card")
+              use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-credit-card")
             |  Payments
             span.badge.badge-secondary.ml-auto 42
           a.dropdown-item(href="#")
             svg.c-icon.mr-2
-              use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-file")
+              use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-file")
             |  Projects
             span.badge.badge-primary.ml-auto 42
           .dropdown-divider
           a.dropdown-item(href="#")
             svg.c-icon.mr-2
-              use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lock-locked")
+              use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked")
             |  Lock Account
           a.dropdown-item(href="#")
             svg.c-icon.mr-2
-              use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-account-logout")
+              use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-account-logout")
             |  Logout
   .c-subheader.px-3
     include ./../_partials/breadcrumb.pug
