--- a/pug/_partials/sidebar.pug
+++ b/pug/_partials/sidebar.pug
@@ -6,7 +6,7 @@
     li.c-sidebar-nav-item
       a.c-sidebar-nav-link(href=ajax ? 'main.html' : 'index.html')
         svg.c-sidebar-nav-icon
-          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-speedometer")
+          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-speedometer")
         |  Dashboard
         span.badge.badge-info NEW
     li.c-sidebar-nav-title
@@ -14,19 +14,19 @@
     li.c-sidebar-nav-item
       a.c-sidebar-nav-link(href='colors.html')
         svg.c-sidebar-nav-icon
-          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-drop1")
+          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-drop1")
         |  Colors
     li.c-sidebar-nav-item
       a.c-sidebar-nav-link(href='typography.html')
           svg.c-sidebar-nav-icon
-            use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-pencil")
+            use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-pencil")
           |  Typography
     li.c-sidebar-nav-title
       | Components
     li.c-sidebar-nav-item.c-sidebar-nav-dropdown
       a.c-sidebar-nav-link.c-sidebar-nav-dropdown-toggle(href='#')
         svg.c-sidebar-nav-icon
-          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-puzzle")
+          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-puzzle")
         |  Base
       ul.c-sidebar-nav-dropdown-items
         li.c-sidebar-nav-item
@@ -96,7 +96,7 @@
     li.c-sidebar-nav-item.c-sidebar-nav-dropdown
       a.c-sidebar-nav-link.c-sidebar-nav-dropdown-toggle(href='#')
         svg.c-sidebar-nav-icon
-          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-cursor")
+          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-cursor")
         |  Buttons
       ul.c-sidebar-nav-dropdown-items
         li.c-sidebar-nav-item
@@ -118,31 +118,28 @@
     li.c-sidebar-nav-item
       a.c-sidebar-nav-link(href='charts.html')
         svg.c-sidebar-nav-icon
-          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-chart-pie")
+          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-chart-pie")
         |  Charts
-    li.c-sidebar-nav-item.c-sidebar-nav-dropdown
-      a.c-sidebar-nav-link.c-sidebar-nav-dropdown-toggle(href='#')
+    li.c-sidebar-nav-dropdown
+      a.c-sidebar-nav-dropdown-toggle(href='#')
         svg.c-sidebar-nav-icon
-          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-star")
+          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-star")
         |  Icons
       ul.c-sidebar-nav-dropdown-items
         li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='icons/coreui-icons.html')
-            span.c-sidebar-nav-icon
+          a.c-sidebar-nav-link(href='icons/coreui-icons-free.html')
             |  CoreUI Icons
             span.badge.badge-success Free
         li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='icons/flags.html')
-            span.c-sidebar-nav-icon
-            |  Flags
+          a.c-sidebar-nav-link(href='icons/coreui-icons-brand.html')
+            |  CoreUI Icons - Brand
         li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='icons/brands.html')
-            span.c-sidebar-nav-icon
-            |  Brands
+          a.c-sidebar-nav-link(href='icons/coreui-icons-flag.html')
+            |  CoreUI Icons - Flag
     li.c-sidebar-nav-item.c-sidebar-nav-dropdown
       a.c-sidebar-nav-link.c-sidebar-nav-dropdown-toggle(href='#')
         svg.c-sidebar-nav-icon
-          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-bell")
+          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bell")
         |  Notifications
       ul.c-sidebar-nav-dropdown-items
         li.c-sidebar-nav-item
@@ -160,7 +157,7 @@
     li.c-sidebar-nav-item
       a.c-sidebar-nav-link(href='widgets.html')
         svg.c-sidebar-nav-icon
-          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-calculator")
+          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-calculator")
         |  Widgets
         span.badge.badge-info NEW
     li.c-sidebar-nav-divider
@@ -169,38 +166,38 @@
     li.c-sidebar-nav-item.c-sidebar-nav-dropdown
       a.c-sidebar-nav-link.c-sidebar-nav-dropdown-toggle(href='#')
         svg.c-sidebar-nav-icon
-          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-star")
+          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-star")
         |  Pages
       ul.c-sidebar-nav-dropdown-items
         li.c-sidebar-nav-item
           a.c-sidebar-nav-link(href=ajax ? 'login.html' : 'login.html' target="_top")
             svg.c-sidebar-nav-icon
-              use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-account-logout")
+              use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-account-logout")
             |  Login
         li.c-sidebar-nav-item
           a.c-sidebar-nav-link(href=ajax ? 'register.html' : 'register.html' target="_top")
             svg.c-sidebar-nav-icon
-              use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-account-logout")
+              use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-account-logout")
             |  Register
         li.c-sidebar-nav-item
           a.c-sidebar-nav-link(href=ajax ? '404.html' : '404.html' target="_top")
             svg.c-sidebar-nav-icon
-              use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-bug")
+              use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bug")
             |  Error 404
         li.c-sidebar-nav-item
           a.c-sidebar-nav-link(href=ajax ? '500.html' : '500.html' target="_top")
             svg.c-sidebar-nav-icon
-              use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-bug")
+              use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bug")
             |  Error 500
     li.c-sidebar-nav-item.mt-auto
       a.c-sidebar-nav-link.c-sidebar-nav-link-success(href="https://coreui.io" target="_top")
         svg.c-sidebar-nav-icon
-          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-cloud-download")
+          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-cloud-download")
         |  Download CoreUI
     li.c-sidebar-nav-item
       a.c-sidebar-nav-link.c-sidebar-nav-link-danger(href="https://coreui.io/pro/" target="_top")
         svg.c-sidebar-nav-icon
-          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-layers")
+          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-layers")
         |  Try CoreUI
         strong PRO
   button.c-sidebar-minimizer.c-class-toggler(type="button" data-target="_parent" data-class="c-sidebar-minimized")
