--- a/pug/base/forms.pug
+++ b/pug/base/forms.pug
@@ -398,7 +398,7 @@ block view
                     .input-group-prepend
                       span.input-group-text
                         svg.c-icon
-                          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-user")
+                          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user")
                     input#input1-group1.form-control(type='text', name='input1-group1', placeholder='Username', autocomplete='username')
               .form-group.row
                 .col-md-12
@@ -407,14 +407,14 @@ block view
                     .input-group-append
                       span.input-group-text
                         svg.c-icon
-                          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-envelope-open")
+                          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-envelope-open")
               .form-group.row
                 .col-md-12
                   .input-group
                     .input-group-prepend
                       span.input-group-text
                         svg.c-icon
-                          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-euro")
+                          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-euro")
                     input#input3-group1.form-control(type='text', name='input3-group1', placeholder='..')
                     .input-group-append
                       span.input-group-text .00
@@ -435,7 +435,7 @@ block view
                     span.input-group-prepend
                       button.btn.btn-primary(type='button')
                         svg.c-icon
-                          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-magnifying-glass")
+                          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-magnifying-glass")
                         |  Search
                     input#input1-group2.form-control(type='text', name='input1-group2', placeholder='Username', autocomplete='username')
               .form-group.row
@@ -450,12 +450,12 @@ block view
                     span.input-group-prepend
                       button.btn.btn-primary(type='button')
                         svg.c-icon
-                          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-facebook")
+                          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-facebook")
                     input#input3-group2.form-control(type='text', name='input3-group2', placeholder='Search')
                     span.input-group-append
                       button.btn.btn-primary(type='button')
                         svg.c-icon
-                          use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-twitter")
+                          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-twitter")
           .card-footer
             button.btn.btn-sm.btn-success(type='submit')
               |  Submit
@@ -613,7 +613,7 @@ block view
                   .input-group-append
                     span.input-group-text
                       svg.c-icon
-                        use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-user")
+                        use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user")
               .form-group
                 .input-group
                   .input-group-prepend
@@ -622,7 +622,7 @@ block view
                   .input-group-append
                     span.input-group-text
                       svg.c-icon
-                        use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-envelope-open")
+                        use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-envelope-open")
               .form-group
                 .input-group
                   .input-group-prepend
@@ -631,7 +631,7 @@ block view
                   .input-group-append
                     span.input-group-text
                       svg.c-icon
-                        use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lock-locked")
+                        use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked")
               .form-group.form-actions
                 button.btn.btn-sm.btn-primary(type='submit') Submit
       .col-sm-4
@@ -646,21 +646,21 @@ block view
                   .input-group-append
                     span.input-group-text
                       svg.c-icon
-                        use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-user")
+                        use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user")
               .form-group
                 .input-group
                   input#email2.form-control(type='email', name='email2', placeholder='Email', autocomplete='email')
                   .input-group-append
                     span.input-group-text
                       svg.c-icon
-                        use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-envelope-open")
+                        use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-envelope-open")
               .form-group
                 .input-group
                   input#password2.form-control(type='password', name='password2', placeholder='Password', autocomplete='new-password')
                   .input-group-append
                     span.input-group-text
                       svg.c-icon
-                        use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lock-locked")
+                        use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked")
               .form-group.form-actions
                 button.btn.btn-sm.btn-secondary(type='submit') Submit
       .col-sm-4
@@ -674,21 +674,21 @@ block view
                   .input-group-prepend
                     span.input-group-text
                       svg.c-icon
-                        use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-user")
+                        use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user")
                   input#username.form-control(type='text', name='username', placeholder='Username', autocomplete='username')
               .form-group
                 .input-group
                   .input-group-prepend
                     span.input-group-text
                       svg.c-icon
-                        use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-envelope-open")
+                        use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-envelope-open")
                   input#email.form-control(type='email', name='email', placeholder='Email', autocomplete='email')
               .form-group
                 .input-group
                   .input-group-prepend
                     span.input-group-text
                       svg.c-icon
-                        use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lock-locked")
+                        use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked")
                   input#password.form-control(type='password', name='password', placeholder='Password', autocomplete='new-password')
               .form-group.form-actions
                 button.btn.btn-sm.btn-success(type='submit') Submit
