--- a/pug/buttons/buttons.pug
+++ b/pug/buttons/buttons.pug
@@ -407,27 +407,27 @@ block view
           .col-6.col-sm-4.col-md.mb-3.mb-xl-0.text-center
             button.btn.btn-primary(type='button')
               svg.c-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lightbulb")
+                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lightbulb")
               |  Standard Button
           .col-6.col-sm-4.col-md.mb-3.mb-xl-0.text-center
             button.btn.btn-outline-secondary(type='button')
               svg.c-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lightbulb")
+                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lightbulb")
               |  Outline Button
           .col-6.col-sm-4.col-md.mb-3.mb-xl-0.text-center
             button.btn.btn-ghost-success(type='button')
               svg.c-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lightbulb")
+                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lightbulb")
               |  Ghost Button
           .col-6.col-sm-4.col-md.mb-3.mb-xl-0.text-center
             button.btn.btn-square.btn-warning(type='button')
               svg.c-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lightbulb")
+                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lightbulb")
               |  Square Button
           .col-6.col-sm-4.col-md.mb-3.mb-xl-0.text-center
             button.btn.btn-pill.btn-danger(type='button')
               svg.c-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lightbulb")
+                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lightbulb")
               |  Pill Button
     .row
       .col-md-6
