--- a/pug/login.pug
+++ b/pug/login.pug
@@ -13,13 +13,13 @@ block view
                 .input-group-prepend
                   span.input-group-text
                     svg.c-icon
-                      use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-user")
+                      use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user")
                 input.form-control(type='text', placeholder='Username')
               .input-group.mb-4
                 .input-group-prepend
                   span.input-group-text
                     svg.c-icon
-                      use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lock-locked")
+                      use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked")
                 input.form-control(type='password', placeholder='Password')
               .row
                 .col-6
