--- a/pug/register.pug
+++ b/pug/register.pug
@@ -12,25 +12,25 @@ block view
               .input-group-prepend
                 span.input-group-text
                   svg.c-icon
-                    use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-user")
+                    use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user")
               input.form-control(type='text', placeholder='Username')
             .input-group.mb-3
               .input-group-prepend
                 span.input-group-text
                   svg.c-icon
-                    use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-envelope-open")
+                    use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-envelope-open")
               input.form-control(type='text', placeholder='Email')
             .input-group.mb-3
               .input-group-prepend
                 span.input-group-text
                   svg.c-icon
-                    use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lock-locked")
+                    use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked")
               input.form-control(type='password', placeholder='Password')
             .input-group.mb-4
               .input-group-prepend
                 span.input-group-text
                   svg.c-icon
-                    use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lock-locked")
+                    use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked")
               input.form-control(type='password', placeholder='Repeat password')
             button.btn.btn-block.btn-success(type='button') Create Account
           .card-footer.p-4
