--- a/pug/500.pug
+++ b/pug/500.pug
@@ -12,7 +12,7 @@ block view
           .input-group-prepend
             span.input-group-text
               svg.c-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-magnifying-glass")
+                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-magnifying-glass")
           input#prependedInput.form-control(size='16', type='text', placeholder='What are you looking for?')
           span.input-group-append
             button.btn.btn-info(type='button') Search
