--- a/pug/base/tabs.pug
+++ b/pug/base/tabs.pug
@@ -77,15 +77,15 @@ block view
           li.nav-item
             a.nav-link.active(data-toggle='tab', href='#home2', role='tab', aria-controls='home')
               svg.c-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-calculator")
+                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-calculator")
           li.nav-item
             a.nav-link(data-toggle='tab', href='#profile2', role='tab', aria-controls='profile')
               svg.c-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-basket")
+                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-basket")
           li.nav-item
             a.nav-link(data-toggle='tab', href='#messages2', role='tab', aria-controls='messages')
               svg.c-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-chart-pie")
+                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-chart-pie")
         .tab-content
           #home2.tab-pane.active(role='tabpanel')
             | 1. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -99,17 +99,17 @@ block view
           li.nav-item
             a.nav-link.active(data-toggle='tab', href='#home3', role='tab', aria-controls='home')
               svg.c-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-calculator")
+                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-calculator")
               |  Calculator
           li.nav-item
             a.nav-link(data-toggle='tab', href='#profile3', role='tab', aria-controls='profile')
               svg.c-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-basket")
+                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-basket")
               |  Shoping cart
           li.nav-item
             a.nav-link(data-toggle='tab', href='#messages3', role='tab', aria-controls='messages')
               svg.c-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-chart-pie")
+                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-chart-pie")
               |  Charts
         .tab-content
           #home3.tab-pane.active(role='tabpanel')
@@ -124,19 +124,19 @@ block view
           li.nav-item
             a.nav-link.active(data-toggle='tab', href='#home4', role='tab', aria-controls='home')
               svg.c-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-calculator")
+                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-calculator")
               |  Calculator
               span.badge.badge-success New
           li.nav-item
             a.nav-link(data-toggle='tab', href='#profile4', role='tab', aria-controls='profile')
               svg.c-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-basket")
+                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-basket")
               |  Shoping cart
               span.badge.badge-pill.badge-danger 29
           li.nav-item
             a.nav-link(data-toggle='tab', href='#messages4', role='tab', aria-controls='messages')
               svg.c-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-chart-pie")
+                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-chart-pie")
               |  Charts
         .tab-content
           #home4.tab-pane.active(role='tabpanel')
