--- a/pug/charts.pug
+++ b/pug/charts.pug
@@ -1,8 +1,10 @@
 extends /_layout/default.pug
 
+block styles
+  link(href='node_modules/@coreui/coreui-chartjs/dist/css/coreui-chartjs.css', rel='stylesheet')
+
 block scripts
-  // Plugins and scripts required by this view
-  script(src='node_modules/chart.js/dist/Chart.min.js')
+  script(src='node_modules/@coreui/coreui-chartjs/dist/js/coreui-chartjs.bundle.js')
   script(src='js/charts.js')
 
 block view
