--- a/pug/index.pug
+++ b/pug/index.pug
@@ -1,13 +1,12 @@
 extends /_layout/default.pug
 
 block styles
-  link(href='node_modules/@coreui/coreui-chartjs/custom-tooltips/dist/css/coreui-chartjs.css', rel='stylesheet')
+  link(href='node_modules/@coreui/coreui-chartjs/dist/css/coreui-chartjs.css', rel='stylesheet')
 
 block scripts
   if !starter
     // Plugins and scripts required by this view
-    script(src='node_modules/chart.js/dist/Chart.min.js')
-    script(src='node_modules/@coreui/coreui-chartjs/custom-tooltips/dist/js/coreui-chartjs.js')
+    script(src='node_modules/@coreui/coreui-chartjs/dist/js/coreui-chartjs.bundle.js')
     script(src='js/main.js')
 
 block view
@@ -15,76 +14,81 @@ block view
     .row
       .col-sm-6.col-lg-3
         .card.text-white.bg-primary
-          .card-body.pb-0
-            .btn-group.float-right
+          .card-body.card-body.pb-0.d-flex.justify-content-between.align-items-start
+            div
+              .text-value-lg 9.823
+              div Members online
+            .btn-group
               button.btn.btn-transparent.dropdown-toggle.p-0(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
                 svg.c-icon
-                  use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-settings")
+                  use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-settings")
               .dropdown-menu.dropdown-menu-right
                 a.dropdown-item(href='#') Action
                 a.dropdown-item(href='#') Another action
                 a.dropdown-item(href='#') Something else here
-            .text-value-lg 9.823
-            div Members online
           .c-chart-wrapper.mt-3.mx-3(style='height:70px;')
             canvas#card-chart1.chart(height='70')
       // /.col
       .col-sm-6.col-lg-3
         .card.text-white.bg-info
-          .card-body.pb-0
-            button.btn.btn-transparent.p-0.float-right(type='button')
-              svg.c-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-location-pin")
-            .text-value-lg 9.823
-            div Members online
+          .card-body.card-body.pb-0.d-flex.justify-content-between.align-items-start
+            div
+              .text-value-lg 9.823
+              div Members online
+            .btn-group
+              button.btn.btn-transparent.dropdown-toggle.p-0(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
+                svg.c-icon
+                  use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-settings")
+              .dropdown-menu.dropdown-menu-right
+                a.dropdown-item(href='#') Action
+                a.dropdown-item(href='#') Another action
+                a.dropdown-item(href='#') Something else here
           .c-chart-wrapper.mt-3.mx-3(style='height:70px;')
             canvas#card-chart2.chart(height='70')
       // /.col
       .col-sm-6.col-lg-3
         .card.text-white.bg-warning
-          .card-body.pb-0
-            .btn-group.float-right
+          .card-body.card-body.pb-0.d-flex.justify-content-between.align-items-start
+            div
+              .text-value-lg 9.823
+              div Members online
+            .btn-group
               button.btn.btn-transparent.dropdown-toggle.p-0(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
                 svg.c-icon
-                  use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-settings")
+                  use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-settings")
               .dropdown-menu.dropdown-menu-right
                 a.dropdown-item(href='#') Action
                 a.dropdown-item(href='#') Another action
                 a.dropdown-item(href='#') Something else here
-            .text-value-lg 9.823
-            div Members online
           .c-chart-wrapper.mt-3(style='height:70px;')
             canvas#card-chart3.chart(height='70')
       // /.col
       .col-sm-6.col-lg-3
         .card.text-white.bg-danger
-          .card-body.pb-0
-            .btn-group.float-right
+          .card-body.card-body.pb-0.d-flex.justify-content-between.align-items-start
+            div
+              .text-value-lg 9.823
+              div Members online
+            .btn-group
               button.btn.btn-transparent.dropdown-toggle.p-0(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
                 svg.c-icon
-                  use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-settings")
+                  use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-settings")
               .dropdown-menu.dropdown-menu-right
                 a.dropdown-item(href='#') Action
                 a.dropdown-item(href='#') Another action
                 a.dropdown-item(href='#') Something else here
-            .text-value-lg 9.823
-            div Members online
           .c-chart-wrapper.mt-3.mx-3(style='height:70px;')
             canvas#card-chart4.chart(height='70')
       // /.col
     // /.row
     .card
       .card-body
-        .row
-          .col-sm-5
+        .d-flex.justify-content-between
+          div
             h4.card-title.mb-0 Traffic
             .small.text-muted September  2019
-          // /.col
-          .col-sm-7.d-none.d-md-block
-            button.btn.btn-primary.float-right(type='button')
-              svg.c-icon
-                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-cloud-download")
-            .btn-group.btn-group-toggle.float-right.mr-3(data-toggle='buttons')
+          .btn-toolbar.d-none.d-md-block(role='toolbar' aria-label='Toolbar with buttons')
+            .btn-group.btn-group-toggle.mx-3(data-toggle='buttons')
               label.btn.btn-outline-secondary
                 input#option1(type='radio', name='options', autocomplete='off')
                 |  Day
@@ -94,8 +98,9 @@ block view
               label.btn.btn-outline-secondary
                 input#option3(type='radio', name='options', autocomplete='off')
                 |  Year
-          // /.col
-        // /.row
+            button.btn.btn-primary(type='button')
+              svg.c-icon
+                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-cloud-download")
         .c-chart-wrapper(style='height:300px;margin-top:40px;')
           canvas#main-chart.chart(height='300')
       .card-footer
@@ -131,7 +136,7 @@ block view
         .card
           .card-header.bg-facebook.content-center
             svg.c-icon.c-icon-3xl.text-white.my-4
-              use(xlink:href="assets/icons/brands/brands-symbol-defs.svg#facebook-f")
+              use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-facebook-f")
             .c-chart-wrapper
               canvas#social-box-chart-1(height='90')
           .card-body.row.text-center
@@ -147,7 +152,7 @@ block view
         .card
           .card-header.bg-twitter.content-center
             svg.c-icon.c-icon-3xl.text-white.my-4
-              use(xlink:href="assets/icons/brands/brands-symbol-defs.svg#twitter")
+              use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-twitter")
             .c-chart-wrapper
               canvas#social-box-chart-2(height='90')
           .card-body.row.text-center
@@ -163,7 +168,7 @@ block view
         .card
           .card-header.bg-linkedin.content-center
             svg.c-icon.c-icon-3xl.text-white.my-4
-              use(xlink:href="assets/icons/brands/brands-symbol-defs.svg#linkedin")
+              use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-linkedin")
             .c-chart-wrapper
               canvas#social-box-chart-3(height='90')
           .card-body.row.text-center
@@ -278,27 +283,27 @@ block view
                 .progress-group
                   .progress-group-header
                     svg.c-icon.progress-group-icon
-                      use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-user")
+                      use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user")
                     div Male
-                    .ml-auto.font-weight-bold 43%
+                    .mfs-auto.font-weight-bold 43%
                   .progress-group-bars
                     .progress.progress-xs
                       .progress-bar.bg-warning(role='progressbar', style='width: 43%', aria-valuenow='43', aria-valuemin='0', aria-valuemax='100')
                 .progress-group.mb-5
                   .progress-group-header
                     svg.c-icon.progress-group-icon
-                      use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-user-female")
+                      use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user-female")
                     div Female
-                    .ml-auto.font-weight-bold 37%
+                    .mfs-auto.font-weight-bold 37%
                   .progress-group-bars
                     .progress.progress-xs
                       .progress-bar.bg-warning(role='progressbar', style='width: 43%', aria-valuenow='43', aria-valuemin='0', aria-valuemax='100')
                 .progress-group
                   .progress-group-header.align-items-end
                     svg.c-icon.progress-group-icon
-                      use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-globe-alt")
+                      use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-globe-alt")
                     div Organic Search
-                    .ml-auto.font-weight-bold.mr-2 191.235
+                    .mfs-auto.font-weight-bold.mfe-2 191.235
                     .text-muted.small (56%)
                   .progress-group-bars
                     .progress.progress-xs
@@ -306,9 +311,9 @@ block view
                 .progress-group
                   .progress-group-header.align-items-end
                     svg.c-icon.progress-group-icon
-                      use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-facebook")
+                      use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-facebook")
                     div Facebook
-                    .ml-auto.font-weight-bold.mr-2 51.223
+                    .mfs-auto.font-weight-bold.mfe-2 51.223
                     .text-muted.small (15%)
                   .progress-group-bars
                     .progress.progress-xs
@@ -316,9 +321,9 @@ block view
                 .progress-group
                   .progress-group-header.align-items-end
                     svg.c-icon.progress-group-icon
-                      use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-twitter")
+                      use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-twitter")
                     div Twitter
-                    .ml-auto.font-weight-bold.mr-2 37.564
+                    .mfs-auto.font-weight-bold.mfe-2 37.564
                     .text-muted.small (11%)
                   .progress-group-bars
                     .progress.progress-xs
@@ -326,9 +331,9 @@ block view
                 .progress-group
                   .progress-group-header.align-items-end
                     svg.c-icon.progress-group-icon
-                      use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-linkedin")
+                      use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-linkedin")
                     div LinkedIn
-                    .ml-auto.font-weight-bold.mr-2 27.319
+                    .mfs-auto.font-weight-bold.mfe-2 27.319
                     .text-muted.small (8%)
                   .progress-group-bars
                     .progress.progress-xs
@@ -341,7 +346,7 @@ block view
                 tr
                   th.text-center
                     svg.c-icon
-                      use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-people")
+                      use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-people")
                   th User
                   th.text-center Country
                   th Usage
@@ -359,7 +364,8 @@ block view
                       span New
                       |  | Registered: Jan 1, 2015
                   td.text-center
-                    i#us.flag-icon.flag-icon-us.c-icon-xl(title='us')
+                    svg.c-icon.c-icon-xl
+                      use(xlink:href="node_modules/@coreui/icons/sprites/flag.svg#cif-us")
                   td
                     .clearfix
                       .float-left
@@ -370,7 +376,7 @@ block view
                       .progress-bar.bg-success(role='progressbar', style='width: 50%', aria-valuenow='50', aria-valuemin='0', aria-valuemax='100')
                   td.text-center
                     svg.c-icon.c-icon-xl
-                      use(xlink:href="assets/icons/brands/brands-symbol-defs.svg#cc-mastercard")
+                      use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-cc-mastercard")
                   td
                     .small.text-muted Last login
                     strong 10 sec ago
@@ -385,7 +391,8 @@ block view
                       span Recurring
                       |  | Registered: Jan 1, 2015
                   td.text-center
-                    i#br.flag-icon.flag-icon-br.c-icon-xl(title='br')
+                    svg.c-icon.c-icon-xl
+                      use(xlink:href="node_modules/@coreui/icons/sprites/flag.svg#cif-br")
                   td
                     .clearfix
                       .float-left
@@ -396,7 +403,7 @@ block view
                       .progress-bar.bg-info(role='progressbar', style='width: 10%', aria-valuenow='10', aria-valuemin='0', aria-valuemax='100')
                   td.text-center
                     svg.c-icon.c-icon-xl
-                      use(xlink:href="assets/icons/brands/brands-symbol-defs.svg#cc-visa")
+                      use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-cc-visa")
                   td
                     .small.text-muted Last login
                     strong 5 minutes ago
@@ -411,7 +418,8 @@ block view
                       span New
                       |  | Registered: Jan 1, 2015
                   td.text-center
-                    i#in.flag-icon.flag-icon-in.c-icon-xl(title='in')
+                    svg.c-icon.c-icon-xl
+                      use(xlink:href="node_modules/@coreui/icons/sprites/flag.svg#cif-in")
                   td
                     .clearfix
                       .float-left
@@ -422,7 +430,7 @@ block view
                       .progress-bar.bg-warning(role='progressbar', style='width: 74%', aria-valuenow='74', aria-valuemin='0', aria-valuemax='100')
                   td.text-center
                     svg.c-icon.c-icon-xl
-                      use(xlink:href="assets/icons/brands/brands-symbol-defs.svg#cc-stripe")
+                      use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-cc-stripe")
                   td
                     .small.text-muted Last login
                     strong 1 hour ago
@@ -437,7 +445,8 @@ block view
                       span New
                       |  | Registered: Jan 1, 2015
                   td.text-center
-                    i#fr.flag-icon.flag-icon-fr.c-icon-xl(title='fr')
+                    svg.c-icon.c-icon-xl
+                      use(xlink:href="node_modules/@coreui/icons/sprites/flag.svg#cif-fr")
                   td
                     .clearfix
                       .float-left
@@ -448,7 +457,7 @@ block view
                       .progress-bar.bg-danger(role='progressbar', style='width: 98%', aria-valuenow='98', aria-valuemin='0', aria-valuemax='100')
                   td.text-center
                     svg.c-icon.c-icon-xl
-                      use(xlink:href="assets/icons/brands/brands-symbol-defs.svg#cc-paypal")
+                      use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-cc-paypal")
                   td
                     .small.text-muted Last login
                     strong Last month
@@ -463,7 +472,8 @@ block view
                       span New
                       |  | Registered: Jan 1, 2015
                   td.text-center
-                    i#es.flag-icon.flag-icon-es.c-icon-xl(title='es')
+                    svg.c-icon.c-icon-xl
+                      use(xlink:href="node_modules/@coreui/icons/sprites/flag.svg#cif-es")
                   td
                     .clearfix
                       .float-left
@@ -474,7 +484,7 @@ block view
                       .progress-bar.bg-info(role='progressbar', style='width: 22%', aria-valuenow='22', aria-valuemin='0', aria-valuemax='100')
                   td.text-center
                     svg.c-icon.c-icon-xl
-                      use(xlink:href="assets/icons/brands/brands-symbol-defs.svg#cc-apple-pay")
+                      use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-cc-apple-pay")
                   td
                     .small.text-muted Last login
                     strong Last week
@@ -489,7 +499,8 @@ block view
                       span New
                       |  | Registered: Jan 1, 2015
                   td.text-center
-                    i#pl.flag-icon.flag-icon-pl.c-icon-xl(title='pl')
+                    svg.c-icon.c-icon-xl
+                      use(xlink:href="node_modules/@coreui/icons/sprites/flag.svg#cif-pl")
                   td
                     .clearfix
                       .float-left
@@ -500,7 +511,7 @@ block view
                       .progress-bar.bg-success(role='progressbar', style='width: 43%', aria-valuenow='43', aria-valuemin='0', aria-valuemax='100')
                   td.text-center
                     svg.c-icon.c-icon-xl
-                      use(xlink:href="assets/icons/brands/brands-symbol-defs.svg#cc-amex")
+                      use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-cc-amex")
                   td
                     .small.text-muted Last login
                     strong Yesterday
